# gpuctl

./: .env.example  .gitignore  404.html  INSTALLATION_GUIDE.md  README.md  README.zh-CN.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  test_gpuctl.py
.github/workflows/: build.yml  mkdocs-deploy.yml
cli/: index.html
community/: index.html
design/README.zh-CN/: index.html
design/api-design/: index.html
design/cli-manual/: index.html
design/model-structure/: index.html
design/prd/: index.html
developer-guide/: index.html
developer-guide/api/: index.html
developer-guide/architecture/: index.html
developer-guide/contributing/: index.html
doc/: CLI_COMMAND_MANUAL.md  README.zh-CN.md  TEST_REPORT.md  api.md  gptctl技术设计约束.md  gpuctl CLI 使用手册.md  gpuctl 技术设计文档.md  gpuctl-wiki.md  gpuctl技术实现.md  model-structure.md  面向算法工程师的AI算力调度平台 (gpuctl) 产品需求文档 .md
docs/: index.md  index.zh.md  mkdocs.yml
docs/cli/: index.md
docs/community/: index.md  index.zh.md
docs/design/: README.zh-CN.md  api-design.md  cli-manual.md  model-structure.md  prd.md
docs/developer-guide/: api.md  architecture.md  architecture.zh.md  contributing.md  contributing.zh.md  index.md
docs/user-guide/: compute.md  index.md  inference.zh.md  notebook.md  notebook.zh.md  pool.md  pool.zh.md  quickstart.md  quota.md  training.zh.md
en/: index.html
en/cli/: index.html
en/community/: index.html
en/developer-guide/: index.html
en/en/: index.html
en/user-guide/: index.html
en/zh/: index.html
gpuctl/: __init__.py  constants.py
gpuctl/api/: common.py  compute.py  inference.py  notebook.py  pool.py  quota.py  training.py
gpuctl/builder/: base_builder.py  compute_builder.py  inference_builder.py  notebook_builder.py  training_builder.py
gpuctl/cli/: create.py  delete.py  get.py  job.py  job_mapper.py  logs.py  main.py  node.py  pool.py  quota.py  update.py
gpuctl/client/: base_client.py  job_client.py  log_client.py  pool_client.py  priority_client.py  quota_client.py
gpuctl/kind/: compute_kind.py  inference_kind.py  notebook_kind.py  training_kind.py
gpuctl/parser/: base_parser.py  compute_parser.py  quota_parser.py  training_parser.py
search/: search_index.json
server/: auth.py  dependencies.py  main.py  models.py
server/routes/: __init__.py  auth.py  jobs.py  labels.py  namespaces.py  nodes.py  pools.py  quotas.py
tests/: conftest.py  test_gpuctl.py  yaml_parse_test.py
tests/api/: conftest.py  test_auth.py  test_jobs.py  test_labels.py  test_nodes.py  test_nodes_extra.py  test_pools.py  test_quotas.py
tests/builder/: __init__.py  test_inference_builder.py  test_notebook_builder.py  test_training_builder.py
tests/cli/: test_describe_events.py  test_job_commands.py  test_node_commands.py  test_pool_commands.py  test_quota_commands.py
tests/client/: test_base_client.py  test_job_client.py
tests/mapper/: test_compute_job.py  test_extract_helpers.py  test_inference_job.py  test_job_mapper.py  test_notebook_job.py  test_training_job.py
tests/mock/: __init__.py  jobs.py  nodes.py  pools.py
user-guide/: index.html
user-guide/compute/: index.html
user-guide/inference/: index.html
user-guide/notebook/: index.html
user-guide/pool/: index.html
zh/: index.html
zh/cli/: index.html
(+107 files in other folders)
