[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpuctl"
version = "1.0.0"
description = "面向算法工程师的AI算力调度平台"
authors = [
    {name = "GPU Control Team", email = "team@gpuctl.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["gpu", "kubernetes", "ai", "scheduling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "kubernetes>=24.2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
api = ["fastapi", "uvicorn"]

[project.scripts]
# 主命令入口点，指向gpuctl包中的cli模块
gpuctl = "gpuctl.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gpuctl*"]