[tool.poetry]
name = "gpuctl"
version = "1.0.0"
description = "面向算法工程师的AI算力调度平台"
authors = ["GPU Control Team <team@gpuctl.com>"]
license = "MIT"
readme = "README.md"
keywords = ["gpu", "kubernetes", "ai", "scheduling"]

[tool.poetry.dependencies]
python = ">=3.8"
kubernetes = ">=24.2.0"
PyYAML = ">=6.0"
pydantic = ">=2.0"

[tool.poetry.extras]
dev = ["pytest", "black", "flake8"]
api = ["fastapi", "uvicorn"]

[tool.poetry.scripts]
gpuctl = "gpuctl.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"