[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "gpuctl"
version = "1.0.0"
description = "AI Computing Power Scheduling Platform"
authors = [
    {name = "g8s-host", email = "g8shost@163.com"}
]
license = {text = "MIT"}
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["gpu", "kubernetes", "ai", "scheduling"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "kubernetes>=24.2.0",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.124.2,<1.0.0",
    "uvicorn>=0.25.0,<1.0.0",
    "python-dotenv>=0.21.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/g8s-host/gpuctl"
Repository = "https://github.com/g8s-host/gpuctl"
Documentation = "https://github.com/g8s-host/gpuctl"
Issues = "https://github.com/g8s-host/gpuctl/issues"

[project.scripts]
gpuctl = "gpuctl.cli.main:main"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"